--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "get notified when someone user mentions you in a JIRA comment",
   "main": "app.js",
   "scripts": {
+    "start": "node ./app/app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Mike Solomon",
